Fix links and improve some readability
- Fix php-compatability link
- Point cruft remover link to the widget
- Enhance tooltip link readability

--- a/style/sitestatus.css
+++ b/style/sitestatus.css
@@ -235,6 +235,11 @@ th, td {
   margin-right: 5px;
 }
 
+#seravo_site_check .tooltip a {
+  color: inherit;
+  text-decoration: underline;
+}
+
 .tooltip .tooltiptext {
   font-size: 0.6em;
   visibility: hidden;
